--- a/src/main/resources/templates/plantillas/Template.html
+++ b/src/main/resources/templates/plantillas/Template.html
@@ -27,7 +27,7 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/ingresarDinero" >Ingresar dinero</a></li>
-                        <li><a class=" dropdown-item" href="/verGastos">Ver</a></li>
+                        <li><a class=" dropdown-item" href="/verIngresos">Ver</a></li>
                     </ul>
                 </div>
 
